@@ -20,37 +20,39 @@ import java.util.List;
 @EnableWebSecurity
 public class WebSecurityConfig {
 
-    @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-        http
-                .cors(Customizer.withDefaults())
-                .csrf(csrf -> csrf.disable())
-                .authorizeHttpRequests(auth -> auth
-                        .requestMatchers(HttpMethod.GET, "/api/utenti/email/**").permitAll()
-                        .requestMatchers(HttpMethod.GET, "/api/sse/subscribe/**").permitAll()
-                        .requestMatchers(HttpMethod.POST, "/api/utenti")
-                        .hasRole(String.valueOf(TipoRuolo.AMMINISTRATORE))
-                        .requestMatchers(HttpMethod.DELETE, "/api/utenti/{email}")
-                        .hasRole(String.valueOf(TipoRuolo.AMMINISTRATORE))
-                        .anyRequest().authenticated())
-                .httpBasic(basic -> basic.authenticationEntryPoint(
-                        (request, response, authException) -> response.sendError(HttpServletResponse.SC_UNAUTHORIZED,
-                                "Credenziali non valide")));
+        @Bean
+        public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+                http
+                                .cors(Customizer.withDefaults())
+                                .csrf(csrf -> csrf.disable())
+                                .authorizeHttpRequests(auth -> auth
+                                                .requestMatchers(HttpMethod.GET, "/api/sse/subscribe/**").permitAll()
+                                                .requestMatchers(HttpMethod.POST, "/api/utenti")
+                                                .hasRole(String.valueOf(TipoRuolo.AMMINISTRATORE))
+                                                .requestMatchers(HttpMethod.DELETE, "/api/utenti/{email}")
+                                                .hasRole(String.valueOf(TipoRuolo.AMMINISTRATORE))
+                                                .anyRequest().authenticated())
+                                .httpBasic(basic -> basic.authenticationEntryPoint(
+                                                (request, response, authException) -> response.sendError(
+                                                                HttpServletResponse.SC_UNAUTHORIZED,
+                                                                "Credenziali non valide")));
 
-        return http.build();
-    }
+                return http.build();
+        }
 
-    @Bean
-    CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(List.of(
-                "http://localhost:*",
-                "http://192.168.*.*:*"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*"));
-        configuration.setAllowCredentials(true);
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
-        return source;
-    }
+        @Bean
+        CorsConfigurationSource corsConfigurationSource() {
+                CorsConfiguration configuration = new CorsConfiguration();
+                configuration.setAllowedOriginPatterns(List.of(
+                                "http://localhost:*",
+                                "http://192.168.*.*:*",
+                                "https://bb26-ui.vercel.app",
+                                "https://*.ngrok-free.dev"));
+                configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+                configuration.setAllowedHeaders(List.of("*"));
+                configuration.setAllowCredentials(true);
+                UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+                source.registerCorsConfiguration("/**", configuration);
+                return source;
+        }
 }
